# CPP-Lab1

./: .gitignore  CMakeLists.txt
Laboration_1/src/: Assignment_1.cpp  Assignment_2.cpp
Laboration_2/src/: Assignment_1.cpp  Assignment_2.cpp  Assignment_3.cpp
Laboration_3/src/: Assignment_1.cpp  Assignment_2.cpp  Assignment_3.cpp
Laboration_4/src/: Assignment_1.cpp  Assignment_2.cpp  Assignment_3.cpp  RingPlingLib.cpp  RingPlingLib.h  ThrowDiceLib.cpp  ThrowDiceLib.h
Laboration_5/src/: Assignment_1A.cpp  Assignment_1B.cpp  Assignment_2.cpp
Project/documentation/: pseudoCode.md
Project/include/: constants.h  fileManager.cpp  fileManager.h  menuManager.cpp  menuManager.h  persons.cpp  persons.h
Project/src/: main.cpp
